k8s/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.expose: carrental.ardaeu10.online
    kompose.service.type: nodeport
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
spec:
  rules:
    - host: carrental.ardaeu10.online
      http:
        paths:
          - backend:
              service:
                name: ui
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
